--- a/frontend/QuizPaze.css
+++ b/frontend/QuizPaze.css
@@ -20,7 +20,7 @@ body{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 70vh;
+  height: 80vh;
   padding: 10px;
   /* width: 100vw; */
 }
@@ -107,3 +107,9 @@ button:hover {
   overflow-x: hidden;
   overflow-x: scroll;
 }
+
+
+/* .Submit-Confirm
+{
+  display: none;
+} */
