--- a/frontend/Create.css
+++ b/frontend/Create.css
@@ -53,4 +53,20 @@ body {
     font-weight: bold;
 }
 
+.custom-button {
+    background-color: rgb(0, 123, 255);
+    color: white;
+    border: none;
+    padding: 12px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-align: center;
+    width: 100%;
+}
+
+.custom-button-container{
+    padding-top: 20px;
+}
 
