--- a/frontend/head.css
+++ b/frontend/head.css
@@ -154,6 +154,9 @@ body{
     .button{
         display: none;
     }
+    .logo{
+        display: none;
+    }
 }
 
 
@@ -172,6 +175,7 @@ body{
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
+    margin: 5px;
 }
 
 .Create-button:hover {
