adding CRUD operations

--- a/frontend/QuizPaze.css
+++ b/frontend/QuizPaze.css
@@ -31,7 +31,7 @@ body{
   padding: 20px 40px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  /* width: 80vw; */
+  width: 80vw;
 }
   
 .quiz-header {
@@ -135,4 +135,11 @@ button:hover {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+}
+
+
+@media screen and (max-width: 600px) {
+  .quiz-container{
+    width: auto;
+  }
 }
