--- a/frontend/index.css
+++ b/frontend/index.css
@@ -83,11 +83,33 @@
     padding: 8px 12px;
     cursor: pointer;
     font-size: 14px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease; 
 }
 
 .playButton:hover {
     background-color: rgb(0, 86, 179);
+}
+
+
+.deleteButton, .updateButton {
+    background-color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    transform: translateY(6px);
+    padding: 2px;
+}
+
+.deleteButton:hover ,.updateButton:hover{
+    background-color: rgb(214, 214, 214);
+}
+
+.deleteimage, .updateimage{
+    /* width: 30px; */
+    margin-top: 3px;
+    height: 25px;
+    
 }
 
 @media (max-width: 600px) {
